@@ -24,6 +24,7 @@ Changelog
     - [Bugfix] Method return type comment parsing works more reliable.
     - [Bugfix] Added missing parameters to the source generation of the Aimeos debug methods.
     - [Bugfix] Mitigated the deprecated page renderer retrieval from the ModuleTemplate instance.
+    - [Bugfix] Standard loading of the configuration file works again. (Standard loading was never used with the TYPO3 extension.)
 
 4.1.2
     - [Feature] PHP 8.0 support
